--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ classifiers = [
 requires-python = ">=3.10"
 dependencies = [
     "tifffile",
+    "pylibCZIrw",
     "numpy",
     "scipy",
     "matplotlib",
