--- a/pyproject.toml
+++ b/pyproject.toml
@@ -60,7 +60,8 @@ build-backend = "setuptools.build_meta"
 include-package-data = true
 
 [tool.setuptools.package-data]
-"*" = ["*.yaml"]
+"*" = ["*.yaml",]
+pyxudeconv = ["trained_models"]
 
 
 [tool.setuptools.dynamic]
