--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Image Processing",
 ]
-requires-python = ">=3.10"
+requires-python = ">= 3.10, < 3.13"
 dependencies = [
     "tifffile",
     "pylibCZIrw",
@@ -30,14 +30,10 @@ dependencies = [
 
 [project.optional-dependencies]
 gpu11 = [
-    "torch>=2.4.1",
-    "pytorch-cuda>=11.1",
-    "pyxu[complete11]"
+    "pyxu[complete11]",
 ]
 gpu12 = [
-    "torch>=2.4.1",
-    "pytorch-cuda>=12.1",
-    "pyxu[complete]"
+    "pyxu[complete]",
 ]
 
 testing = [
